<resources>
    <string name="app_name">OvertimeCodeDone</string>
    <string name="action_settings">Settings</string>
    <string name="hour">Hr</string>
    <string name="min">Min</string>
    <string name="duration">Duración</string>
    <string name="description">Descripción</string>
    <string name="commitId">ID Commit</string>
    <string name="email">Email</string>
    <string name="overtime_code_done">Codificando en Horas Extra</string>
    <string name="who_send">A quien enviaras el reporte?</string>
    <string name="header">Header</string>
    <string name="select_header">Select a header</string>
    <string name="select_footer">Select a footer</string>
    <string name="subject">Reporte de Codificando en Horas Extra</string>
    <string name="footer">Pie de pagina</string>
    <string name="ok">Listo</string>
    <string name="date">Fecha</string>
</resources>
