<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/floatContainer"
    >

<android.support.v7.widget.CardView
    android:layout_alignParentBottom="true"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    app:cardBackgroundColor="@color/colorAccent2"
    app:cardElevation="8dp"
    app:cardCornerRadius="2.5dp"
    app:cardMaxElevation="8dp"
    app:cardUseCompatPadding="true"
    app:cardPreventCornerOverlap="true"
    android:layout_marginLeft="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:layout_height="wrap_content"
    android:id="@+id/container">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content"
   >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/touched"
        >
        <com.kaotiko.overtimecodedone.utils.views.AppTextView
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:gravity="center"
            android:layout_marginLeft="8dp"
            android:text="@string/commitId"
            android:id="@+id/commitId"
            android:textSize="18sp"
            android:textColor="@android:color/white"/>
        <com.kaotiko.overtimecodedone.utils.views.AppEditText
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:layout_height="55dp"
            android:id="@+id/textCommitId"
            android:layout_marginRight="8dp"
            android:drawablePadding="10dp"
            android:layout_toRightOf="@+id/commitId"
            android:gravity="center_vertical"
       />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/timeContainer"
        android:layout_height="wrap_content"
        android:layout_below="@+id/touched">
        <com.kaotiko.overtimecodedone.utils.views.AppTextView
            android:layout_width="0dp"
            android:layout_marginLeft="2.5dp"
            android:layout_marginBottom="2.5dp"
            android:layout_weight="4"
            android:hint="@string/date"
            android:paddingRight="8dp"
            android:textColorHint="@color/colorAccentText"
            android:layout_height="50dp"
            android:background="@drawable/border_up_down"
            android:id="@+id/textDate"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:drawablePadding="10dp"
            />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="50dp"
            android:paddingLeft="16dp"
            android:layout_marginRight="2.5dp"
            android:layout_marginBottom="2.5dp"
            android:id="@+id/textHour"
            android:background="@color/bg_title"
            >
            <com.kaotiko.overtimecodedone.utils.views.AppTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_centerVertical="true"
                android:textColor="@color/colorAccentText"
                android:layout_alignParentLeft="true"
   android:id="@+id/duration"
                android:text="@string/duration" />
            <com.kaotiko.overtimecodedone.utils.views.AppTextInputLayout
                android:layout_width="wrap_content"
                android:layout_marginLeft="8dp"

                android:textColorHint="@color/colorAccentText"
                android:paddingTop="4dp"
                android:layout_toRightOf="@+id/duration"
                android:layout_height="wrap_content">
            <com.kaotiko.overtimecodedone.utils.views.AppEditText
                android:layout_width="39sp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/numberPickerHour"
                android:nextFocusForward="@+id/numberPickerMinutes"
                android:imeOptions="actionNext"
                android:hint="@string/hour"
                android:maxLines="1"
                android:singleLine="true"
                />
            </com.kaotiko.overtimecodedone.utils.views.AppTextInputLayout>
            <com.kaotiko.overtimecodedone.utils.views.AppTextInputLayout
                android:layout_width="wrap_content"
                android:textColorHint="@color/colorAccentText"
                android:layout_alignParentRight="true"
                android:paddingTop="4dp"
                android:id="@+id/next"
                android:layout_marginRight="8dp"
                android:layout_height="wrap_content">
            <com.kaotiko.overtimecodedone.utils.views.AppEditText
                android:layout_width="49sp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/numberPickerMinutes"

                android:maxLines="1"
                android:singleLine="true"
                android:hint="@string/min"

         />
            </com.kaotiko.overtimecodedone.utils.views.AppTextInputLayout>

        </RelativeLayout>
    </LinearLayout>
    <com.kaotiko.overtimecodedone.utils.views.AppTextInputLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/timeContainer"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="2.5dp"
        android:background="@color/bg_title"
        android:textColorHint="@color/colorAccentText"
        android:layout_marginRight="2.5dp"
        android:paddingTop="4dp"
        android:gravity="bottom"
        android:layout_marginBottom="2.5dp"
        android:layout_height="80sp">
        <com.kaotiko.overtimecodedone.utils.views.AppEditText
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:inputType="textMultiLine"
            android:id="@+id/description"
            android:padding="8dp"
            android:maxLines="2"
            android:lines="2"
            android:background="@drawable/border_up_down"
            android:hint="@string/description"
            />
    </com.kaotiko.overtimecodedone.utils.views.AppTextInputLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/stat_sys_upload" /></RelativeLayout>